# mcp-db-explore

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
seed/: init.sql
src/mcp_db_explorer/: __init__.py  config.py  database.py  server.py  translator.py
tests/: conftest.py  test_database.py  test_server.py  test_translator.py
