[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-db-explorer"
version = "0.1.0"
description = "Natural language database explorer via Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andrii Yasynchuk" }]
dependencies = [
    "mcp[cli]>=1.0.0",
    "asyncpg>=0.29.0",
    "anthropic>=0.40.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[project.scripts]
mcp-db-explorer = "mcp_db_explorer.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_db_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["mcp_db_explorer"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true
